<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game_2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数：</string>
    <string name="bestscore">最高分：</string>
    <string name="newgame">重新开始</string>
    <string name="appinfo">天津大学仁爱学院，作者：韩晴晴</string>
    <string name="project_name">完成项目:2048小游戏</string>
    <string name="splash_startgame">进入游戏</string>
    <string name="project_author">完成作者: 韩晴晴    </string>
    <string name="project_date">完成时间:2016年12月</string>
    <string name="dialog_exitgame">退出游戏</string>
    <string name="dialog_exitmessage">您确定退出游戏？</string>
    <string name="dialog_ok">退出游戏</string>
    <string name="dialog_no">留在游戏</string>
    <string name="dialog_gameover_title">你好，GameOver!</string>
    <string name="dialog_gameover_message">你太菜了,再试一次？</string>
     <string name="dialog_gamewin_title">恭喜您，游戏胜利!</string>
    <string name="dialog_gamewin_message">你是否再开一场？</string>
    <string name="dialog_gameover_ok">重新开始</string>
    <string name="dialog_gameover_no">取消</string>
</resources>