<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context="com.hanqingqing.game.MainActivity">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/color_gamebg"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bestscore"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvBestScore"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:background="@color/color_gamebg"
        android:layout_weight="1" >

        <com.hanqingqing.game.dao.GameView
            android:id="@+id/gameView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.hanqingqing.game.dao.GameView>

        <com.hanqingqing.game.dao.AnimLayer
            android:id="@+id/animLayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.hanqingqing.game.dao.AnimLayer>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_gamebg">
        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="match_parent"
            android:background="@drawable/bg_btn2_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/newgame" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gamebg"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/appinfo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>
